# raytracer

./: .gitignore  CMakeLists.txt  README.md  plot_results.py
mesh_files/: basic.msh  info.msh  simple.msh
src/: Camera.cpp  Camera.h  Image.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  main.cpp
